--- a/BlazorApp1/Client/wwwroot/index.html
+++ b/BlazorApp1/Client/wwwroot/index.html
@@ -24,6 +24,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="Scripts/InteropHelper.js"></script>
 </body>
 
 </html>
